[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.3"
gloo-utils = "0.1"
js-sys = "0.3"
yew = "0.19.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "ImageBitmap"
]